--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <body>
     <nav>
         <a href="/testgpages/">Support Vector Olives</a>
-                              &nbsp;|&nbsp;<a href="/testgpages/olives-eda.html">EDA</a>
-                              &nbsp;|&nbsp;<a href="/testgpages/olives-model.html">Models</a>
+                              &nbsp;|&nbsp;<a href="/testgpages_1/olives-eda.html">EDA</a>
+                              &nbsp;|&nbsp;<a href="/testgpages_1/olives-model.html">Models</a>
 
 
 
