--- a/index.html
+++ b/index.html
@@ -967,7 +967,7 @@ margin-bottom:6.0pt;margin-left:0in;mso-para-margin-top:6.0pt;mso-para-margin-ri
 1.0gd;mso-para-margin-bottom:6.0pt;mso-para-margin-left:0in;text-align:center;
 line-height:150%;mso-layout-grid-align:none;text-autospace:none'><span
 class=GramE><b><span style='font-size:17.0pt;line-height:150%;font-family:URWPalladioL-Bold;
-mso-bidi-font-family:URWPalladioL-Bold'>Alzheimer’s Disease</span></b></span><b><span
+mso-bidi-font-family:URWPalladioL-Bold'>Alzheimer's Disease</span></b></span><b><span
 style='font-size:17.0pt;line-height:150%;font-family:URWPalladioL-Bold;
 mso-bidi-font-family:URWPalladioL-Bold'> and Cognitive Impairment Prediction<o:p></o:p></span></b></p>
 
@@ -993,7 +993,7 @@ mso-bidi-font-family:URWPalladioL-Bold'><o:p>&nbsp;</o:p></span></b></p>
 margin-left:1.0in;margin-bottom:.0001pt;line-height:normal;mso-layout-grid-align:
 none;text-autospace:none'><b style='mso-bidi-font-weight:normal'><span
 style='font-size:16.0pt;font-family:"Times New Roman","serif"'>Background:</span></b><span
-style='font-size:16.0pt;font-family:"Times New Roman","serif"'> Alzheimer’s
+style='font-size:16.0pt;font-family:"Times New Roman","serif"'> Alzheimer's
 disease (AD) is a type of dementia that causes problems with memory, thinking and
 behavior. AD is an irreversible process that typically begins after age 60.
 Once a patient has been diagnosed, their mental function usually declines until
@@ -1012,7 +1012,7 @@ more than 5 million people aged 65 and over suffer from the disease. AD is
 currently ranked as the sixth leading cause of death in the United States, and
 is the third leading cause of death for older people, just behind heart disease
 and cancer (NIA, 2017). The estimated national cost of patient care for
-Alzheimer’s and other types of dementia was $236 billion in 2016. Therefore
+Alzheimer's and other types of dementia was $236 billion in 2016. Therefore
 there is both a human and economic incentive to find an effective therapy for
 AD. <o:p></o:p></span></p>
 
@@ -1028,7 +1028,7 @@ identified strong indicators for the disease. For example, an accumulation in
 the brain of Amyloid Beta protein (also referred to as A_ protein or amyloid
 plaque) that is dense enough to meet a certain threshold (i.e., Amyloid Beta
 positivity) has been identified as a risk factor for AD (Dana, 2014). Leading
-biotechnology companies proactively developing therapies for Alzheimer’s
+biotechnology companies proactively developing therapies for Alzheimer's
 patients. Due to the currently irreversible nature of AD, it is believed that
 the effectiveness of any potential therapy greatly depends on early detection
 and treatment.<o:p></o:p></span></p>
