--- a/index.html
+++ b/index.html
@@ -998,7 +998,7 @@ disease (AD) is a type of dementia that causes problems with memory, thinking an
 behavior. AD is an irreversible process that typically begins after age 60.
 Once a patient has been diagnosed, their mental function usually declines until
 death. While some drug and non-drug treatments may help with both the cognitive
-and behavioral symptoms, currently Alzheimer’s disease has no cure.<o:p></o:p></span></p>
+and behavioral symptoms, currently Alzheimer's disease has no cure.<o:p></o:p></span></p>
 
 <p class=MsoNormal style='margin-top:0in;margin-right:0in;margin-bottom:0in;
 margin-left:1.0in;margin-bottom:.0001pt;line-height:normal;mso-layout-grid-align:
