--- a/part1.htm
+++ b/part1.htm
@@ -868,15 +868,15 @@ self-contained:</span></p>
 0in;margin-left:.1in;margin-bottom:.0001pt;line-height:150%;text-autospace:
 none'><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman","serif"'>Project
 goal: The goal for this project is to propose, build and evaluate a data-driven
-model for an Alzheimer’s or cognitive impairment related investigation using patient
+model for an Alzheimer's or cognitive impairment related investigation using patient
 demographic information,</span></p>
 
 <p class=MsoNormal style='margin-top:6.0pt;margin-right:-.1in;margin-bottom:
 0in;margin-left:.1in;margin-bottom:.0001pt;line-height:150%;text-autospace:
 none'><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman","serif"'>medical
 records, and related data. A classic investigation would be centered around
-building a machine learning solution for evaluating a patient’s risk of
-developing Alzheimer’s based on medical history. </span></p>
+building a machine learning solution for evaluating a patient's risk of
+developing Alzheimer's based on medical history. </span></p>
 
 <p class=MsoNormal style='margin-top:6.0pt;margin-right:-.1in;margin-bottom:
 0in;margin-left:.1in;margin-bottom:.0001pt;line-height:150%;text-autospace:
