--- a/part1.htm
+++ b/part1.htm
@@ -14,7 +14,6 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <link rel=colorSchemeMapping href="part1_files/colorschememapping.xml">
 <!--[if gte mso 9]><xml>
  <w:WordDocument>
-  <w:SpellingState>Clean</w:SpellingState>
   <w:TrackMoves>false</w:TrackMoves>
   <w:TrackFormatting/>
   <w:ValidateAgainstSchemas/>
@@ -617,14 +616,6 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <!--
  /* Font Definitions */
  @font-face
-	{font-family:SimSun;
-	panose-1:2 1 6 0 3 1 1 1 1 1;
-	mso-font-alt:\5B8B\4F53;
-	mso-font-charset:134;
-	mso-generic-font-family:auto;
-	mso-font-pitch:variable;
-	mso-font-signature:3 680460288 22 0 262145 0;}
-@font-face
 	{font-family:"Cambria Math";
 	panose-1:2 4 5 3 5 4 6 3 2 4;
 	mso-font-charset:1;
@@ -639,13 +630,6 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-generic-font-family:swiss;
 	mso-font-pitch:variable;
 	mso-font-signature:-520092929 1073786111 9 0 415 0;}
-@font-face
-	{font-family:"\@SimSun";
-	panose-1:2 1 6 0 3 1 1 1 1 1;
-	mso-font-charset:134;
-	mso-generic-font-family:auto;
-	mso-font-pitch:auto;
-	mso-font-signature:0 0 0 0 0 0;}
  /* Style Definitions */
  p.MsoNormal, li.MsoNormal, div.MsoNormal
 	{mso-style-unhide:no;
@@ -655,11 +639,11 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	margin-right:0in;
 	margin-bottom:8.0pt;
 	margin-left:0in;
-	line-height:106%;
+	line-height:105%;
 	mso-pagination:widow-orphan;
 	font-size:11.0pt;
 	font-family:"Calibri","sans-serif";
-	mso-fareast-font-family:SimSun;
+	mso-fareast-font-family:"Times New Roman";
 	mso-fareast-theme-font:minor-fareast;}
 p.MsoListParagraph, li.MsoListParagraph, div.MsoListParagraph
 	{mso-style-priority:34;
@@ -669,11 +653,11 @@ p.MsoListParagraph, li.MsoListParagraph, div.MsoListParagraph
 	margin-right:0in;
 	margin-bottom:8.0pt;
 	margin-left:.5in;
-	line-height:106%;
+	line-height:105%;
 	mso-pagination:widow-orphan;
 	font-size:11.0pt;
 	font-family:"Calibri","sans-serif";
-	mso-fareast-font-family:SimSun;
+	mso-fareast-font-family:"Times New Roman";
 	mso-fareast-theme-font:minor-fareast;}
 p.msolistparagraphcxspfirst, li.msolistparagraphcxspfirst, div.msolistparagraphcxspfirst
 	{mso-style-name:msolistparagraphcxspfirst;
@@ -683,11 +667,11 @@ p.msolistparagraphcxspfirst, li.msolistparagraphcxspfirst, div.msolistparagraphc
 	margin-bottom:0in;
 	margin-left:.5in;
 	margin-bottom:.0001pt;
-	line-height:106%;
+	line-height:105%;
 	mso-pagination:widow-orphan;
 	font-size:11.0pt;
 	font-family:"Calibri","sans-serif";
-	mso-fareast-font-family:SimSun;
+	mso-fareast-font-family:"Times New Roman";
 	mso-fareast-theme-font:minor-fareast;}
 p.msolistparagraphcxspmiddle, li.msolistparagraphcxspmiddle, div.msolistparagraphcxspmiddle
 	{mso-style-name:msolistparagraphcxspmiddle;
@@ -697,11 +681,11 @@ p.msolistparagraphcxspmiddle, li.msolistparagraphcxspmiddle, div.msolistparagrap
 	margin-bottom:0in;
 	margin-left:.5in;
 	margin-bottom:.0001pt;
-	line-height:106%;
+	line-height:105%;
 	mso-pagination:widow-orphan;
 	font-size:11.0pt;
 	font-family:"Calibri","sans-serif";
-	mso-fareast-font-family:SimSun;
+	mso-fareast-font-family:"Times New Roman";
 	mso-fareast-theme-font:minor-fareast;}
 p.msolistparagraphcxsplast, li.msolistparagraphcxsplast, div.msolistparagraphcxsplast
 	{mso-style-name:msolistparagraphcxsplast;
@@ -710,11 +694,11 @@ p.msolistparagraphcxsplast, li.msolistparagraphcxsplast, div.msolistparagraphcxs
 	margin-right:0in;
 	margin-bottom:8.0pt;
 	margin-left:.5in;
-	line-height:106%;
+	line-height:105%;
 	mso-pagination:widow-orphan;
 	font-size:11.0pt;
 	font-family:"Calibri","sans-serif";
-	mso-fareast-font-family:SimSun;
+	mso-fareast-font-family:"Times New Roman";
 	mso-fareast-theme-font:minor-fareast;}
 p.msochpdefault, li.msochpdefault, div.msochpdefault
 	{mso-style-name:msochpdefault;
@@ -726,7 +710,7 @@ p.msochpdefault, li.msochpdefault, div.msochpdefault
 	mso-pagination:widow-orphan;
 	font-size:12.0pt;
 	font-family:"Calibri","sans-serif";
-	mso-fareast-font-family:SimSun;
+	mso-fareast-font-family:"Times New Roman";
 	mso-fareast-theme-font:minor-fareast;}
 p.msopapdefault, li.msopapdefault, div.msopapdefault
 	{mso-style-name:msopapdefault;
@@ -735,11 +719,11 @@ p.msopapdefault, li.msopapdefault, div.msopapdefault
 	margin-right:0in;
 	margin-bottom:8.0pt;
 	margin-left:0in;
-	line-height:106%;
+	line-height:105%;
 	mso-pagination:widow-orphan;
 	font-size:12.0pt;
 	font-family:"Times New Roman","serif";
-	mso-fareast-font-family:SimSun;
+	mso-fareast-font-family:"Times New Roman";
 	mso-fareast-theme-font:minor-fareast;}
 .MsoChpDefault
 	{mso-style-type:export-only;
@@ -751,10 +735,6 @@ p.msopapdefault, li.msopapdefault, div.msopapdefault
 	mso-ascii-font-family:Calibri;
 	mso-hansi-font-family:Calibri;
 	mso-bidi-font-family:Calibri;}
-.MsoPapDefault
-	{mso-style-type:export-only;
-	margin-bottom:8.0pt;
-	line-height:106%;}
 @page WordSection1
 	{size:8.5in 11.0in;
 	margin:1.0in 1.0in 1.0in 1.0in;
@@ -763,66 +743,6 @@ p.msopapdefault, li.msopapdefault, div.msopapdefault
 	mso-paper-source:0;}
 div.WordSection1
 	{page:WordSection1;}
- /* List Definitions */
- @list l0
-	{mso-list-id:1699811917;
-	mso-list-type:hybrid;
-	mso-list-template-ids:-1654896878 67698703 67698713 67698715 67698703 67698713 67698715 67698703 67698713 67698715;}
-@list l0:level1
-	{mso-level-tab-stop:none;
-	mso-level-number-position:left;
-	margin-left:37.5pt;
-	text-indent:-.25in;}
-@list l0:level2
-	{mso-level-number-format:alpha-lower;
-	mso-level-tab-stop:none;
-	mso-level-number-position:left;
-	margin-left:73.5pt;
-	text-indent:-.25in;}
-@list l0:level3
-	{mso-level-number-format:roman-lower;
-	mso-level-tab-stop:none;
-	mso-level-number-position:right;
-	margin-left:109.5pt;
-	text-indent:-9.0pt;}
-@list l0:level4
-	{mso-level-tab-stop:none;
-	mso-level-number-position:left;
-	margin-left:145.5pt;
-	text-indent:-.25in;}
-@list l0:level5
-	{mso-level-number-format:alpha-lower;
-	mso-level-tab-stop:none;
-	mso-level-number-position:left;
-	margin-left:181.5pt;
-	text-indent:-.25in;}
-@list l0:level6
-	{mso-level-number-format:roman-lower;
-	mso-level-tab-stop:none;
-	mso-level-number-position:right;
-	margin-left:217.5pt;
-	text-indent:-9.0pt;}
-@list l0:level7
-	{mso-level-tab-stop:none;
-	mso-level-number-position:left;
-	margin-left:253.5pt;
-	text-indent:-.25in;}
-@list l0:level8
-	{mso-level-number-format:alpha-lower;
-	mso-level-tab-stop:none;
-	mso-level-number-position:left;
-	margin-left:289.5pt;
-	text-indent:-.25in;}
-@list l0:level9
-	{mso-level-number-format:roman-lower;
-	mso-level-tab-stop:none;
-	mso-level-number-position:right;
-	margin-left:325.5pt;
-	text-indent:-9.0pt;}
-ol
-	{margin-bottom:0in;}
-ul
-	{margin-bottom:0in;}
 -->
 </style>
 <!--[if gte mso 10]>
@@ -836,11 +756,8 @@ ul
 	mso-style-priority:99;
 	mso-style-parent:"";
 	mso-padding-alt:0in 5.4pt 0in 5.4pt;
-	mso-para-margin-top:0in;
-	mso-para-margin-right:0in;
-	mso-para-margin-bottom:8.0pt;
-	mso-para-margin-left:0in;
-	line-height:106%;
+	mso-para-margin:0in;
+	mso-para-margin-bottom:.0001pt;
 	mso-pagination:widow-orphan;
 	font-size:10.0pt;
 	font-family:"Calibri","sans-serif";}
@@ -857,9 +774,9 @@ ul
 
 <div class=WordSection1>
 
-<p class=MsoListParagraph style='margin-top:6.0pt;margin-right:-.1in;
-margin-bottom:6.0pt;margin-left:9.0pt;line-height:150%;text-autospace:none'><b><span
-style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman","serif"'>Problem
+<p class=MsoNormal style='margin-top:6.0pt;margin-right:-.1in;margin-bottom:
+6.0pt;margin-left:0in;line-height:150%;text-autospace:none'><b><span
+style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman","serif"'>1.Problem
 Statement and Motivation: </span></b><span style='font-size:12.0pt;line-height:
 150%;font-family:"Times New Roman","serif"'>This should be brief and
 self-contained:</span></p>
@@ -868,15 +785,15 @@ self-contained:</span></p>
 0in;margin-left:.1in;margin-bottom:.0001pt;line-height:150%;text-autospace:
 none'><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman","serif"'>Project
 goal: The goal for this project is to propose, build and evaluate a data-driven
-model for an Alzheimer's or cognitive impairment related investigation using patient
+model for an Alzheimer’s or cognitive impairment related investigation using patient
 demographic information,</span></p>
 
 <p class=MsoNormal style='margin-top:6.0pt;margin-right:-.1in;margin-bottom:
 0in;margin-left:.1in;margin-bottom:.0001pt;line-height:150%;text-autospace:
 none'><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman","serif"'>medical
 records, and related data. A classic investigation would be centered around
-building a machine learning solution for evaluating a patient's risk of
-developing Alzheimer's based on medical history. </span></p>
+building a machine learning solution for evaluating a patient’s risk of
+developing Alzheimer’s based on medical history. </span></p>
 
 <p class=MsoNormal style='margin-top:6.0pt;margin-right:-.1in;margin-bottom:
 0in;margin-left:.1in;margin-bottom:.0001pt;line-height:150%;text-autospace:
